// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components > properly parses multiple components with props 1`] = `
"<script module>
	export const slug = "test";
</script>
<script>
	import CustomComponent from 'test/components/CustomComponent.svelte';
	import AnotherComponent from 'test/components/AnotherComponent.svelte';
</script>
<article><CustomComponent title="Welcome" description="This is a test component"><p>This is the content inside the custom component. It can contain <strong>markdown</strong> and other elements.</p></CustomComponent><AnotherComponent status="active" count="5"><p>This is content inside another component. It shows the status and count values.</p></AnotherComponent></article>"
`;

exports[`Frontmatter > properly parses files with frontmatter 1`] = `
"<script module>
	export const slug = "test";
	export const frontmatter = {"title":"A test","description":"A longer idea","keywords":["one","two"]};
	const { title, description, keywords } = frontmatter;
</script>
<article><p>Content. Such great content.</p></article>"
`;
